tests/expectations/parser-module/bad_items_fail.out
Error [EPAR0370047]: expected `const`, `struct`, or `fn` in module
    --> test_0:1:1
     |
   1 | let x: u32 = 0;
     | ^^^
Error [EPAR0370047]: expected `const`, `struct`, or `fn` in module
    --> test_5:1:1
     |
   1 | record Foo {}
     | ^^^^^^
Error [EPAR0370047]: expected `const`, `struct`, or `fn` in module
    --> test_6:1:1
     |
   1 | mapping Map
     | ^^^^^^^
Error [EPAR0370047]: expected `const`, `struct`, or `fn` in module
    --> test_7:1:1
     |
   1 | program foo.aleo {}
     | ^^^^^^^
Error [EPAR0370047]: expected `const`, `struct`, or `fn` in module
    --> test_8:1:1
     |
   1 | {
     | ^
